--- a/Project.css
+++ b/Project.css
@@ -2,27 +2,32 @@
     margin:0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-
-}
+    border: 2px solid red
+ }
 .header {
     min-height: 100vh;
     width: 100%;
+    height: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(Images/Background.jpg);
     background-position: center;    
     background-size: cover;
     position: relative;
-
     
 }
 nav{
+    
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
     color: white;
+
+
 }
 nav img{
-    width: 120px;
+    max-width: 120px;
+    height: 100%;
+    width: 100%;
 }
 .nav-Links{
     flex: 1;    
@@ -61,7 +66,8 @@ nav img{
     text-align: center;
 }
 .text-box h1{ 
-    font-size: 80px;
+    font-size: 9vh;
+    padding-top: 7rem !important;
 }
 .text-box p{ 
     margin: 10px 0 50px;
@@ -88,36 +94,9 @@ nav img{
 nav .fa{
     display: none;
 }
-@media(max-width: 1000px){
-    .text-box h1{
-        font-size: 20px;
-    }
-    .nav-Links ul li{
-        display: block;
-    }
-    .nav-Links{
-        position: fixed;
-        background: linear-gradient(to right, #ff416c, #ff4b2b);
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
-    }
-    nav .fa{
-        display: block;
-        color: #fff;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
 
-    }
-    .nav-Links ul{
-        padding: 40px;
-    }
-}
+
+
 /* -------------- About Crypto ------------*/
 
 .Crypto{
@@ -197,6 +176,11 @@ p{
         width: 80%;
     }
 }
+
+
+/* End of Crypto */
+
+
 /* -------------- Business ------------*/
 .business{
     width: 80%;
@@ -208,9 +192,13 @@ p{
     flex-flow: wrap;  
 }
 .business-header{
-    font-size: 50px;   
     color: rgb(48, 45, 45); 
 }
+
+.business-header h1{
+    font-size: 5vh;
+}
+
 .business-col{
     flex-basis: 32%;
     border-radius: 10px;
@@ -334,12 +322,6 @@ p{
 }
 
 
-
-
-
-
-
-
 /* <!---------------About Us------------------> */
 .Sub-header{
     height: 50vh;
@@ -435,4 +417,49 @@ p{
     outline: none;
     border: 1px solid #ccc;
     box-sizing: border-box;
+}
+
+
+@media (min-width:320px){ /* smartphones, iPhone, portrait 480x320 phones */
+    /* .text-box{
+        margin-top: 3rem;
+    } */
+
+}
+
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
+/* For Desktop */
+@media(max-width: 1000px){ 
+    .text-box h1{
+        font-size: 20px;
+    }
+    .nav-Links ul li{
+        display: block;
+    }
+    .nav-Links{
+        position: fixed;
+        background: linear-gradient(to right, #ff416c, #ff4b2b);
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    nav .fa{
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+
+    }
+    .nav-Links ul{
+        padding: 40px;
+    }
 }
